--- a/app/src/main/res/layout/fragment_debt_tracker.xml
+++ b/app/src/main/res/layout/fragment_debt_tracker.xml
@@ -7,8 +7,8 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="fragment debt tracker" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
