--- a/app/src/main/res/layout/fragment_debt_tracker.xml
+++ b/app/src/main/res/layout/fragment_debt_tracker.xml
@@ -1,14 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.DebtTrackerFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView1"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="403dp"
+            android:layout_height="42dp"
+            android:text="Track New Debt"
+            tools:layout_editor_absoluteX="5dp"
+            tools:layout_editor_absoluteY="334dp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debt Tracker"
+            android:textSize="48sp"
+            tools:layout_editor_absoluteX="70dp"
+            tools:layout_editor_absoluteY="20dp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Organize and Payoff Debts"
+            android:textSize="20sp"
+            tools:layout_editor_absoluteX="86dp"
+            tools:layout_editor_absoluteY="92dp" />
+
+        <ScrollView
+            android:layout_width="389dp"
+            android:layout_height="207dp"
+            tools:layout_editor_absoluteX="11dp"
+            tools:layout_editor_absoluteY="127dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
