--- a/app/src/main/res/layout/fragment_debt_tracker.xml
+++ b/app/src/main/res/layout/fragment_debt_tracker.xml
@@ -10,15 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="441dp"
-            android:layout_height="44dp"
-            android:text="Track New Debt"
-            tools:layout_editor_absoluteX="5dp"
-            tools:layout_editor_absoluteY="334dp"
-            app:cornerRadius="0dp"/>
-
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
@@ -63,8 +54,9 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="403dp"
-            android:layout_height="42dp"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="3dp"
