--- a/app/src/main/res/layout/fragment_new_debt_payoff.xml
+++ b/app/src/main/res/layout/fragment_new_debt_payoff.xml
@@ -60,6 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:hint="name of debt"
                     android:inputType="text" />
 
             </LinearLayout>
@@ -85,8 +86,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="text"
-                    />
+                    android:hint="description of debt"
+                    android:inputType="text" />
             </LinearLayout>
 
             <LinearLayout
@@ -107,6 +108,7 @@
                     android:layout_width="282dp"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:hint="e.g. 2500"
                     android:inputType="numberDecimal" />
 
             </LinearLayout>
@@ -121,7 +123,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Interest Rate:"
+                    android:text="Interest Rate (%):"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -131,6 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:hint="e.g. 12.5"
                     android:inputType="numberDecimal" />
 
             </LinearLayout>
@@ -155,6 +158,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:hint="e.g. 4"
                     android:inputType="number" />
 
             </LinearLayout>
