--- a/app/src/main/res/layout/fragment_bills_calendar.xml
+++ b/app/src/main/res/layout/fragment_bills_calendar.xml
@@ -50,11 +50,21 @@
             style="@style/Widget.AppCompat.Button"
             />
 
+
+        <com.applandeo.materialcalendarview.CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="-1" />
+
+
         <CalendarView
             android:id="@+id/calendar_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:visibility="gone" />
     </LinearLayout>
 
 </FrameLayout>
