finish debt calendar

--- a/app/src/main/res/layout/fragment_bills_calendar.xml
+++ b/app/src/main/res/layout/fragment_bills_calendar.xml
@@ -43,12 +43,10 @@
 
         <Button
             android:id="@+id/btn_add_bill"
+            style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btnAddBill"
-            app:cornerRadius="0dp"
-            style="@style/Widget.AppCompat.Button"
-            />
+            android:text="@string/btnAddBill" />
 
 
         <com.applandeo.materialcalendarview.CalendarView
@@ -56,15 +54,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="-1" />
+            android:layout_weight="-1"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp" />
 
 
-        <CalendarView
-            android:id="@+id/calendar_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone" />
     </LinearLayout>
 
 </FrameLayout>
