--- a/app/src/main/res/layout/item_bill.xml
+++ b/app/src/main/res/layout/item_bill.xml
@@ -9,32 +9,33 @@
         android:id="@+id/tv_bill_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:padding="4dp"
         android:text="Test test"
-        android:textStyle="bold"
-        android:padding="4dp"/>
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_bill_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:padding="4dp"
         android:text="Test test"
-        android:padding="4dp"/>
+        android:textSize="14sp"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/tv_bill_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:padding="4dp"
         android:text="Test test"
-        android:padding="4dp"/>
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_bill_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:padding="4dp"
         android:text="Test test"
-        android:padding="4dp"/>
+        android:textSize="14sp" />
 </LinearLayout>
