--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -32,18 +32,18 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardViewGraph"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_width="wrap_content"
+            android:layout_height="388dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:elevation="10dp"
-            app:cardCornerRadius="10dp" >
+            app:cardCornerRadius="10dp">
 
             <org.eazegraph.lib.charts.PieChart
                 android:id="@+id/piechart"
-                android:layout_width="378dp"
-                android:layout_height="311dp"
+                android:layout_width="wrap_content"
+                android:layout_height="358dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
@@ -54,12 +54,5 @@
     </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="2">
 
-
-    </LinearLayout>
 </FrameLayout>
