--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -50,27 +50,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            app:cardCornerRadius="10dp"
-            android:elevation="10dp">
+            android:elevation="10dp"
+            app:cardCornerRadius="10dp">
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="395dp"
+                android:layout_height="484dp"
                 android:text="TextView" />
+
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardviewinfo"
-            android:layout_width="match_parent"
-            android:layout_height="459dp"
-            android:layout_below="@+id/cardViewGraph"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:elevation="10dp"
-            app:cardCornerRadius="10dp"></androidx.cardview.widget.CardView>
     </LinearLayout>
 
 
