--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -53,11 +53,57 @@
             android:elevation="10dp"
             app:cardCornerRadius="10dp">
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="395dp"
-                android:layout_height="484dp"
-                android:text="TextView" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textviewTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="58dp"
+                    android:text="Monthly Expenditures"
+                    android:textAlignment="center"
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp">
+
+                    <TextView
+                        android:id="@+id/textViewBills"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Bills"
+                        android:textSize="20sp" />
+                </ScrollView>
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp">
+
+                    <TextView
+                        android:id="@+id/textViewDebts"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Debts"
+                        android:textSize="20sp" />
+                </ScrollView>
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="183dp">
+
+                    <TextView
+                        android:id="@+id/textViewExpenses"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Expenses"
+                        android:textSize="20sp" />
+                </ScrollView>
+
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
